# izip2pdf

./: README.md  pyproject.toml  zip2pdf.py
.github/workflows/: publish-to-test-pypi.yml
src/izip2pdf/: izip2pdf.py
src/zip2pdf/: __init__.py  zip2pdf.py
tests/: test_zip2pdf.py
