[project]
name = "zip2pdf"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hy", email = "zwwp9976@gmail.com" }
]
dependencies = [
    "ruff>=0.4.10",
    "img2pdf>=0.5.1",
    "tqdm>=4.66.4",
    "natsort>=8.4.0",
    "pillow>=10.3.0",
    "pillow-avif-plugin>=1.4.3",
    "pillow-heif>=0.16.0",
    "twine>=5.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
zip2pdf = "zip2pdf.zip2pdf:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zip2pdf"]
